--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <h3>Music</h3>
         <ul>
-          <li><a href="https://soundcloud.com/dinzbag/sets/math-songs">Math Songs</a></li>
+          <li><h2><a href="https://soundcloud.com/dinzbag/sets/math-songs">Math Songs</a></h2></li>
             <ul>
               <li><a href="https://www.youtube.com/watch?v=BNq8ICIBpD8">Parabola Baby (Math parody of Black Widow by Iggy Azaela ft. Rita Ora)</a></li>
               <li><a href="https://soundcloud.com/dinzbag/mr-parabolic">Mr. Parabolic (Math parody of Boombastic by Shaggy)</a></li>
@@ -54,13 +54,13 @@
               <li><a href="https://soundcloud.com/dinzbag/graphin">Graphin (Math parody of Lemon by N.E.R.D and Rihanna)</a></li>
             </ul>
           <li><a href="https://soundcloud.com/dinzbag/sets/compsci-songs">Computer Science Songs</a></li>
-            <ui>
+            <ul>
               <li><a href="https://soundcloud.com/dinzbag/cece">CeCe (Programming parody of FEFE by 6ix9ine, Nicki Minaj and Murda Beatz)</a></li>
-            </ui>
+            </ul>
           <li>Other</li>           
-            <ui>
+            <ul>
               <li><a href="https://youtu.be/Jk_LccWHihQ">Big IQ Anthem (Our team introduction video for the ICPC NADC Regional Qualifiers)</a></li>
-            </ui>
+            </ul>
         </ul>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
