--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
 
         <h2>Music</h2>
         <ul>
-          <li><h3><a href="https://soundcloud.com/dinzbag/sets/math-songs">Math Songs</a></h3></li>
+          <li><h3>Math Songs</h3><a href="https://soundcloud.com/dinzbag/sets/math-songs"> (Playlist)</a></li>
             <ul>
               <li><a href="https://www.youtube.com/watch?v=BNq8ICIBpD8">Parabola Baby (Math parody of Black Widow by Iggy Azaela ft. Rita Ora)</a></li>
               <li><a href="https://soundcloud.com/dinzbag/mr-parabolic">Mr. Parabolic (Math parody of Boombastic by Shaggy)</a></li>
               <li><a href="https://soundcloud.com/dinzbag/king-kounta">King Kounta (Math parody of King Kunta by Kendrick Lamar)</a></li>
               <li><a href="https://soundcloud.com/dinzbag/graphin">Graphin (Math parody of Lemon by N.E.R.D and Rihanna)</a></li>
             </ul>
-          <li><h2><a href="https://soundcloud.com/dinzbag/sets/compsci-songs">Computer Science Songs</a></h2></li>
+          <li><h3>Computer Science Songs</h3><a href="https://soundcloud.com/dinzbag/sets/compsci-songs"> (Playlist)</a></li>
             <ul>
               <li><a href="https://soundcloud.com/dinzbag/cece">CeCe (Programming parody of FEFE by 6ix9ine, Nicki Minaj and Murda Beatz)</a></li>
             </ul>
-          <li>Other</li>           
+          <li><h3>Other</h3></li>           
             <ul>
-              <li><h2><a href="https://youtu.be/Jk_LccWHihQ">Big IQ Anthem (Our team introduction video for the ICPC NADC Regional Qualifiers)</a></h2></li>
+              <li><a href="https://youtu.be/Jk_LccWHihQ">Big IQ Anthem (Our team introduction video for the ICPC NADC Regional Qualifiers)</a></li>
             </ul>
         </ul>
       <footer>
