--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
         <ul>
           <li><h3>Math Songs</h3><a href="https://soundcloud.com/dinzbag/sets/math-songs"> (Playlist)</a></li>
             <ul>
-              <li><a href="https://www.youtube.com/watch?v=BNq8ICIBpD8">Parabola Baby (Math parody of Black Widow by Iggy Azaela ft. Rita Ora)</a></li>
-              <li><a href="https://soundcloud.com/dinzbag/mr-parabolic">Mr. Parabolic (Math parody of Boombastic by Shaggy)</a></li>
-              <li><a href="https://soundcloud.com/dinzbag/king-kounta">King Kounta (Math parody of King Kunta by Kendrick Lamar)</a></li>
-              <li><a href="https://soundcloud.com/dinzbag/graphin">Graphin (Math parody of Lemon by N.E.R.D and Rihanna)</a></li>
+              <li>2015 <a href="https://www.youtube.com/watch?v=BNq8ICIBpD8">Parabola Baby</a> (Math parody of Black Widow by Iggy Azaela ft. Rita Ora)</li>
+              <li>2017 <a href="https://soundcloud.com/dinzbag/mr-parabolic">Mr. Parabolic</a> (Math parody of Boombastic by Shaggy)</li>
+              <li>2017 <a href="https://soundcloud.com/dinzbag/king-kounta">King Kounta</a> (Math parody of King Kunta by Kendrick Lamar)</li>
+              <li>2020 <a href="https://soundcloud.com/dinzbag/graphin">Graphin</a> (Math parody of Lemon by N.E.R.D and Rihanna)</li>
             </ul>
           <li><h3>Computer Science Songs</h3><a href="https://soundcloud.com/dinzbag/sets/compsci-songs"> (Playlist)</a></li>
             <ul>
-              <li><a href="https://soundcloud.com/dinzbag/cece">CeCe (Programming parody of FEFE by 6ix9ine, Nicki Minaj and Murda Beatz)</a></li>
+              <li>2020 <a href="https://soundcloud.com/dinzbag/cece">CeCe</a> (Programming parody of FEFE by 6ix9ine, Nicki Minaj and Murda Beatz)</li>
             </ul>
           <li><h3>Other</h3></li>           
             <ul>
-              <li><a href="https://youtu.be/Jk_LccWHihQ">Big IQ Anthem (Our team introduction video for the ICPC NADC Regional Qualifiers)</a></li>
+              <li>2021 <a href="https://youtu.be/Jk_LccWHihQ">Big IQ Anthem</a> (Our team introduction video for the ICPC NADC Regional Qualifiers)</li>
             </ul>
         </ul>
       <footer>
