--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
         <p>I have many different hobbies that I use as creative outputs to express myself. <br>
         These hobbies range from food to music to Mathematics and beyond! </p>
         
-        <h1>Projects</h1>
-
-        <p>In addition to the changes in the previous section, certain references are auto-linked:</p>
+        <h1>Computer Science Projects</h1>
 
         <ul>
           <li>ex</li>
@@ -62,8 +60,28 @@
               <li>2021 <a href="https://youtu.be/Jk_LccWHihQ">Big IQ Anthem</a> (Our team introduction video for the ICPC NADC Regional Qualifiers)</li>
             </ul>
         </ul>
+        <h2>Food</h2>
+        <ul>
+          <li><h3>Reviews</h3><a href="https://youtube.com/playlist?list=PLZPRgdoubPtRfmiJYKQoaJoJ_BMEvm-RE"> (Playlist)</a></li>
+        </ul>
+        <h2>Fitness</h2>
+        <ul>
+          <li><h3><a href="https://instagram.com/dinzbag.fitness">Bodybuilding Page</a></h3></li>
+        </ul>
+        <h2>Gaming</h2>
+        <ul>
+          <li><h3>Live Streams</h3></li>
+          <li><h3>Play Throughs</h3></li>
+          <li><h3>eSports</h3></li>
+        </ul>
+        <h1>Community Events</h1>
+        <ul>
+          <li>2020 Code Ninjas Easter Egg Hunt</li>
+          <li>2020 Code Ninjas Trick or Treat</li>
+          <li>2020 Children’s Hospital Foundation of Manitoba GALActic Experience</li>
+        </ul>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><smallTheme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
