--- a/ProProjects/Data Science/UofM_DataScience_StudentChallenge.html
+++ b/ProProjects/Data Science/UofM_DataScience_StudentChallenge.html
@@ -1,1 +1,42 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Data Science Student Challenge</title>
 
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Adrien Dinzey!</h1>
+        <p>My personal page! Learn more about me.</p>
+        <ul>
+          <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
+          <li><a href="https://www.linkedin.com/in/adriendinzey"><strong>LinkedIn</strong></a></li>
+          <li><a href="https://instagram.com/dinzbag"><strong>Instagram</strong></a></li>          
+          <li><a href="https://soundcloud.com/dinzbag"><strong>SoundCloud</strong></a></li>           
+          <li><a href="https://www.youtube.com/channel/UCSKBTV7pPlCeZSW5aYm3kWg"><strong>Youtube</strong></a></li>   
+          <li><a href="https://twitch.tv/dinzbag"><strong>Twitch</strong></a></li>          
+        </ul>
+      </header>
+      <section>
+        <h1>University of Manitoba Data Science Nexus/Bison Transport Student Challenge</h1>
+        <p>I am currently participating in this challenge hosted by the University of Manitoba Data Science Nexus. 
+          Out of the three possibilites, we chose the Bison Transport challenge. 
+          The goal of this challenge is to address network imbalances in Bison Transports wide and vast transport route. 
+          An imbalance in this scenario is defined to be a whenever inbound freight does not match outbound freight.
+          We must create a model that looks at properties such as timing , geographic and equipment to accurately identify imablances.
+          Stay tuned to see our submission!</p>
+      <footer>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+  </body>
+</html>
