--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <p>I have many different hobbies that I use as creative outputs to express myself. <br>
         These hobbies range from food to music to Mathematics and beyond! </p>
         
-        <h1>Computer Science Projects</h1>
-
+        <h1>Professional Projects</h1>
+        <h2>Data Science</h2>
         <ul>
-          <li>ex</li>
+          <li><h3><a href="./ProProjects/Data Science/UofM_DataScience_StudentChallenge.html">Freight Imbalances</a></h3></li>
         </ul>
 
         <h1>Hobby Projects</h1>
