--- a/ProProjects/Data Science/UofM_DataScience_StudentChallenge.html
+++ b/ProProjects/Data Science/UofM_DataScience_StudentChallenge.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>[TEST]Adrien Dinzey!</h1>
+        <h1>[TEST2]Adrien Dinzey!</h1>
         <p>My personal page! Learn more about me.</p>
         <ul>
           <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
@@ -37,6 +37,6 @@
       <footer>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="./javascripts/scale.fix.js"></script>
   </body>
 </html>
