--- a/ProProjects/Data Science/UofM_DataScience_StudentChallenge.html
+++ b/ProProjects/Data Science/UofM_DataScience_StudentChallenge.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Data Science Student Challenge</title>
 
-    <link rel="stylesheet" href="./CSS/styles.css">
-    <link rel="stylesheet" href="./CSS/pygment_trac.css">
+    <link rel="stylesheet" href=".../CSS/styles.css">
+    <link rel="stylesheet" href=".../CSS/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -37,6 +37,6 @@
       <footer>
       </footer>
     </div>
-    <script src="./javascripts/scale.fix.js"></script>
+    <script src=".../javascripts/scale.fix.js"></script>
   </body>
 </html>
