--- a/ProProjects/Data Science/UofM_DataScience_StudentChallenge.html
+++ b/ProProjects/Data Science/UofM_DataScience_StudentChallenge.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>[TEST4]Adrien Dinzey!</h1>
+        <h1>Adrien Dinzey!</h1>
         <p>My personal page! Learn more about me.</p>
         <ul>
           <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
@@ -29,7 +29,7 @@
       <section>
         <h1>University of Manitoba Data Science Nexus/Bison Transport Student Challenge</h1>
         <p>I am currently participating in this challenge hosted by the University of Manitoba Data Science Nexus. 
-          Out of the three possibilites, we chose the Bison Transport challenge. 
+          Out of the three possibilites, we chose the Bison Transport challenge. <br>
           The goal of this challenge is to address network imbalances in Bison Transports wide and vast transport route. 
           An imbalance in this scenario is defined to be a whenever inbound freight does not match outbound freight.
           We must create a model that looks at properties such as timing , geographic and equipment to accurately identify imablances.
