--- a/HobbyProjects/Music/MathSongs.html
+++ b/HobbyProjects/Music/MathSongs.html
@@ -1,1 +1,50 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Math Songs</title>
 
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/styles.css">
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Adrien Dinzey!</h1>
+        <p>My personal page! Learn more about me.</p>
+        <ul>
+          <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
+          <li><a href="https://www.linkedin.com/in/adriendinzey"><strong>LinkedIn</strong></a></li>
+          <li><a href="https://instagram.com/dinzbag"><strong>Instagram</strong></a></li>          
+          <li><a href="https://soundcloud.com/dinzbag"><strong>SoundCloud</strong></a></li>           
+          <li><a href="https://www.youtube.com/channel/UCSKBTV7pPlCeZSW5aYm3kWg"><strong>Youtube</strong></a></li>   
+          <li><a href="https://twitch.tv/dinzbag"><strong>Twitch</strong></a></li>          
+        </ul>
+      </header>
+      <section>
+        <h1>Math Songs</h1>
+        
+        <h2>Some History</h2>
+        <p>Since my Sophmore year of highschool I have had the hobby of making "Mathematical Parodies" of popular songs. 
+          It began as a bet between myself and my Math teacher. One day we were looking at Math parodies of popular songs, but I didn't enjoy them very much.
+          I mentioned to my teacher that myself and some classmates could make a "Math Song" of much higher quality. The teacher offerred us "an extra 4%". 
+          Without asking any specifics we set off and created our smash hit "Parabola Baby". From then on, we made these songs purely out of passion.</p>
+        
+        <h2>Song List<br><a href="https://soundcloud.com/dinzbag/sets/math-songs">(playlist)</a></h2>
+            <ul>
+              <li>2015 <a href="https://www.youtube.com/watch?v=BNq8ICIBpD8">Parabola Baby</a> (Math parody of Black Widow by Iggy Azaela ft. Rita Ora)</li>
+              <li>2017 <a href="https://soundcloud.com/dinzbag/mr-parabolic">Mr. Parabolic</a> (Math parody of Boombastic by Shaggy)</li>
+              <li>2017 <a href="https://soundcloud.com/dinzbag/king-kounta">King Kounta</a> (Math parody of King Kunta by Kendrick Lamar)</li>
+              <li>2020 <a href="https://soundcloud.com/dinzbag/graphin">Graphin</a> (Math parody of Lemon by N.E.R.D and Rihanna)</li>
+            </ul>
+      <footer>
+      </footer>
+    </div>
+    <script src="https://adriendinzey.github.io/javascripts/scale.fix.js"></script>
+  </body>
+</html>
