--- a/index.html
+++ b/index.html
@@ -44,13 +44,7 @@
 
         <h2>Music</h2>
         <ul>
-          <li><h3>Math Songs</h3><a href="https://soundcloud.com/dinzbag/sets/math-songs"> (Playlist)</a></li>
-            <ul>
-              <li>2015 <a href="https://www.youtube.com/watch?v=BNq8ICIBpD8">Parabola Baby</a> (Math parody of Black Widow by Iggy Azaela ft. Rita Ora)</li>
-              <li>2017 <a href="https://soundcloud.com/dinzbag/mr-parabolic">Mr. Parabolic</a> (Math parody of Boombastic by Shaggy)</li>
-              <li>2017 <a href="https://soundcloud.com/dinzbag/king-kounta">King Kounta</a> (Math parody of King Kunta by Kendrick Lamar)</li>
-              <li>2020 <a href="https://soundcloud.com/dinzbag/graphin">Graphin</a> (Math parody of Lemon by N.E.R.D and Rihanna)</li>
-            </ul>
+          <li><h3>Math Songs</h3><a href="./HobbyProjects/Music/MathSongs.html"> (Playlist)</a></li>
           <li><h3>Computer Science Songs</h3><a href="https://soundcloud.com/dinzbag/sets/compsci-songs"> (Playlist)</a></li>
             <ul>
               <li>2020 <a href="https://soundcloud.com/dinzbag/cece">CeCe</a> (Programming parody of FEFE by 6ix9ine, Nicki Minaj and Murda Beatz)</li>
