--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <h2>Music</h2>
         <ul>
-          <li><h3>Math Songs</h3><a href="./HobbyProjects/Music/MathSongs.html"> (Playlist)</a></li>
+          <li><h3><a href="./HobbyProjects/Music/MathSongs.html">Math Songs</a></h3></li>
           <li><h3>Computer Science Songs</h3><a href="https://soundcloud.com/dinzbag/sets/compsci-songs"> (Playlist)</a></li>
             <ul>
               <li>2020 <a href="https://soundcloud.com/dinzbag/cece">CeCe</a> (Programming parody of FEFE by 6ix9ine, Nicki Minaj and Murda Beatz)</li>
