--- a/HobbyProjects/Music/MathSongs.html
+++ b/HobbyProjects/Music/MathSongs.html
@@ -35,7 +35,7 @@
           I mentioned to my teacher that myself and some classmates could make a "Math Song" of much higher quality. The teacher offerred us "an extra 4%". 
           Without asking any specifics we set off and created our smash hit "Parabola Baby". From then on, we made these songs purely out of passion.</p>
         
-        <h2>Song List<br><a href="https://soundcloud.com/dinzbag/sets/math-songs">(playlist)</a></h2>
+        <h2>Song List</h2><p><a href="https://soundcloud.com/dinzbag/sets/math-songs">(playlist)</a></p>
             <ul>
               <li>2015 <a href="https://www.youtube.com/watch?v=BNq8ICIBpD8">Parabola Baby</a> (Math parody of Black Widow by Iggy Azaela ft. Rita Ora)</li>
               <li>2017 <a href="https://soundcloud.com/dinzbag/mr-parabolic">Mr. Parabolic</a> (Math parody of Boombastic by Shaggy)</li>
