--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
       </header>
       <section>
         <h1>About Me</h1>
-
+         
         <p>I am a Computer Science student at the University of Manitoba heading into my final year! Upon graduation I plan to pursue a Master's degree in Machine Learning/Artifical Intelligence.</p>
 
         <p>I have many different hobbies that I use as creative outputs to express myself. <br>
         These hobbies range from food to music to Mathematics and beyond! </p>
         
-        <h1>Professional Projects</h1>
+        <h1><br><br>Professional Projects</h1>
         <h2>Data Science</h2>
         <ul>
           <li><h3><a href="./ProProjects/Data Science/UofM_DataScience_StudentChallenge.html">Freight Imbalances</a></h3></li>
         </ul>
 
-        <h1>Hobby Projects</h1>
+        <h1><br><br>Hobby Projects</h1>
 
         <h2>Music</h2>
         <ul>
@@ -68,7 +68,7 @@
           <li><h3>Play Throughs</h3></li>
           <li><h3>eSports</h3></li>
         </ul>
-        <h1>Community Events</h1>
+        <h1><br><br>Community Events</h1>
         <ul>
           <li>2020 Code Ninjas Easter Egg Hunt</li>
           <li>2020 Code Ninjas Trick or Treat</li>
