--- a/HobbyProjects/Music/CompSciSongs.html
+++ b/HobbyProjects/Music/CompSciSongs.html
@@ -1,1 +1,44 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Math Songs</title>
 
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/styles.css">
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1><a href="https://adriendinzey.github.io/">Adrien Dinzey!</a></h1>
+        <p>My personal page! Learn more about me.</p>
+        <ul>
+          <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
+          <li><a href="https://www.linkedin.com/in/adriendinzey"><strong>LinkedIn</strong></a></li>
+          <li><a href="https://instagram.com/dinzbag"><strong>Instagram</strong></a></li>          
+          <li><a href="https://soundcloud.com/dinzbag"><strong>SoundCloud</strong></a></li>           
+          <li><a href="https://www.youtube.com/channel/UCSKBTV7pPlCeZSW5aYm3kWg"><strong>Youtube</strong></a></li>   
+          <li><a href="https://twitch.tv/dinzbag"><strong>Twitch</strong></a></li>          
+        </ul>
+      </header>
+      <section>
+        <h1>Math Songs</h1>
+        
+        <h2>Background Information</h2>
+        <p>Similar to the <a href="https://adriendinzey.github.io/HobbyProjects/Music/MathSongs.html">Math Songs</a>, these are parodies of popular songs that provide educational value while being enjoyable.</p>
+        
+        <h2>Song List</h2><p><a href="https://soundcloud.com/dinzbag/sets/compsci-songs">(playlist)</a></p>            
+        <ul>
+          <li>2020 <a href="https://soundcloud.com/dinzbag/cece">CeCe</a> (Programming parody of FEFE by 6ix9ine, Nicki Minaj and Murda Beatz)</li>
+        </ul>
+      <footer>
+      </footer>
+    </div>
+    <script src="https://adriendinzey.github.io/javascripts/scale.fix.js"></script>
+  </body>
+</html>
