--- a/HobbyProjects/Music/CompSciSongs.html
+++ b/HobbyProjects/Music/CompSciSongs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Math Songs</title>
+    <title>Computer Science Songs</title>
 
     <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/styles.css">
     <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/pygment_trac.css">
@@ -27,7 +27,7 @@
         </ul>
       </header>
       <section>
-        <h1>Math Songs</h1>
+        <h1>Computer Science Songs</h1>
         
         <h2>Background Information</h2>
         <p>Similar to the <a href="https://adriendinzey.github.io/HobbyProjects/Music/MathSongs.html">Math Songs</a>, these are parodies of popular songs that provide educational value while being enjoyable.</p>
