--- a/HobbyProjects/Music/OtherSongs.html
+++ b/HobbyProjects/Music/OtherSongs.html
@@ -1,1 +1,44 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Miscellaneous Songs</title>
 
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/styles.css">
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1><a href="https://adriendinzey.github.io/">Adrien Dinzey!</a></h1>
+        <p>My personal page! Learn more about me.</p>
+        <ul>
+          <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
+          <li><a href="https://www.linkedin.com/in/adriendinzey"><strong>LinkedIn</strong></a></li>
+          <li><a href="https://instagram.com/dinzbag"><strong>Instagram</strong></a></li>          
+          <li><a href="https://soundcloud.com/dinzbag"><strong>SoundCloud</strong></a></li>           
+          <li><a href="https://www.youtube.com/channel/UCSKBTV7pPlCeZSW5aYm3kWg"><strong>Youtube</strong></a></li>   
+          <li><a href="https://twitch.tv/dinzbag"><strong>Twitch</strong></a></li>          
+        </ul>
+      </header>
+      <section>
+        <h1>iscellaneous Songs</h1>
+        
+        <h2>Other</h2>
+        <p>Music I have made just for fun!</p>
+        
+        <h2>Song List</h2>    
+        <ul>
+          <li>2021 <a href="https://youtu.be/Jk_LccWHihQ">Big IQ Anthem</a> (Our team introduction video for the ICPC NADC Regional Qualifiers)</li>
+        </ul>
+      <footer>
+      </footer>
+    </div>
+    <script src="https://adriendinzey.github.io/javascripts/scale.fix.js"></script>
+  </body>
+</html>
