--- a/HobbyProjects/Music/OtherSongs.html
+++ b/HobbyProjects/Music/OtherSongs.html
@@ -27,7 +27,7 @@
         </ul>
       </header>
       <section>
-        <h1>iscellaneous Songs</h1>
+        <h1>Miscellaneous Songs</h1>
         
         <h2>Other</h2>
         <p>Music I have made just for fun!</p>
