--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
         <ul>
           <li><h3><a href="./HobbyProjects/Music/MathSongs.html">Math Songs</a></h3></li>          
           <li><h3><a href="./HobbyProjects/Music/CompSciSongs.html">Computer Science Songs</a></h3></li>
-          <li><h3>Other</h3></li>           
-            <ul>
-              <li>2021 <a href="https://youtu.be/Jk_LccWHihQ">Big IQ Anthem</a> (Our team introduction video for the ICPC NADC Regional Qualifiers)</li>
-            </ul>
+          <li><h3><a href="./HobbyProjects/Music/OtherSongs.html">Other</a></h3></li>
         </ul>
         <h2>Food</h2>
         <ul>
