--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </ul>
         <h2>Food</h2>
         <ul>
-          <li><h3>Reviews</h3><a href="https://youtube.com/playlist?list=PLZPRgdoubPtRfmiJYKQoaJoJ_BMEvm-RE"> (Playlist)</a></li>
+          <li><h3><a href="./HobbyProjects/Food/FoodReviews.html">Reviews</a></h3></li>
         </ul>
         <h2>Fitness</h2>
         <ul>
