--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <p>I have many different hobbies that I use as creative outputs to express myself. <br>
         These hobbies range from food to music to Mathematics and beyond! </p>
         
-        <h1><br><br>Professional Projects</h1>
+        <h1><br>Professional Projects</h1>
         <h2>Data Science</h2>
         <ul>
           <li><h3><a href="./ProProjects/Data Science/UofM_DataScience_StudentChallenge.html">Freight Imbalances</a></h3></li>
         </ul>
 
-        <h1><br><br>Hobby Projects</h1>
+        <h1><br>Hobby Projects</h1>
 
         <h2>Music</h2>
         <ul>
@@ -54,7 +54,7 @@
         </ul>
         <h2>Fitness</h2>
         <ul>
-          <li><h3><a href="https://instagram.com/dinzbag.fitness">Bodybuilding Page</a></h3></li>
+          <li><h3><a href="./HobbyProjects/Ftiness/BodybuildingPage.html">Bodybuilding Page</a></h3></li>
         </ul>
         <h2>Gaming</h2>
         <ul>
@@ -62,7 +62,7 @@
           <li><h3>Play Throughs</h3></li>
           <li><h3>eSports</h3></li>
         </ul>
-        <h1><br><br>Community Events</h1>
+        <h1><br>Community Events</h1>
         <ul>
           <li>2020 Code Ninjas Easter Egg Hunt</li>
           <li>2020 Code Ninjas Trick or Treat</li>
