--- a/index.html
+++ b/index.html
@@ -35,32 +35,32 @@
         These hobbies range from food to music to Mathematics and beyond! </p>
         
         <h1><br>Professional Projects</h1>
-        <h2>Data Science</h2>
+        <h3>Data Science</h2>
         <ul>
-          <li><h3><a href="./ProProjects/Data Science/UofM_DataScience_StudentChallenge.html">Freight Imbalances</a></h3></li>
+          <li><a href="./ProProjects/Data Science/UofM_DataScience_StudentChallenge.html">Freight Imbalances</a></li>
         </ul>
 
         <h1><br>Hobby Projects</h1>
 
-        <h2>Music</h2>
+        <h3>Music</h3>
         <ul>
-          <li><h3><a href="./HobbyProjects/Music/MathSongs.html">Math Songs</a></h3></li>          
-          <li><h3><a href="./HobbyProjects/Music/CompSciSongs.html">Computer Science Songs</a></h3></li>
-          <li><h3><a href="./HobbyProjects/Music/OtherSongs.html">Other</a></h3></li>
+          <li><a href="./HobbyProjects/Music/MathSongs.html">Math Songs</a></li>          
+          <li><a href="./HobbyProjects/Music/CompSciSongs.html">Computer Science Songs</a></li>
+          <li><a href="./HobbyProjects/Music/OtherSongs.html">Other</a></li>
         </ul>
-        <h2>Food</h2>
+        <h3>Food</h3>
         <ul>
-          <li><h3><a href="./HobbyProjects/Food/FoodReviews.html">Reviews</a></h3></li>
+          <li><a href="./HobbyProjects/Food/FoodReviews.html">Reviews</a></li>
         </ul>
-        <h2>Fitness</h2>
+        <h3>Fitness</h3>
         <ul>
-          <li><h3><a href="./HobbyProjects/Ftiness/BodybuildingPage.html">Bodybuilding Page</a></h3></li>
+          <li><a href="./HobbyProjects/Ftiness/BodybuildingPage.html">Bodybuilding Page</a></li>
         </ul>
-        <h2>Gaming</h2>
+        <h3>Gaming</h3>
         <ul>
-          <li><h3>Live Streams</h3></li>
-          <li><h3>Play Throughs</h3></li>
-          <li><h3>eSports</h3></li>
+          <li><h3>Live Streams</li>
+          <li>Play Throughs</li>
+          <li>eSports</li>
         </ul>
         <h1><br>Community Events</h1>
         <ul>
