--- a/index.html
+++ b/index.html
@@ -34,39 +34,39 @@
         <p>I have many different hobbies that I use as creative outputs to express myself. <br>
         These hobbies range from food to music to Mathematics and beyond! </p>
         
-        <h1><br>Professional Projects</h1>
-        <h3>Data Science</h2>
+        <h1>Professional Projects</h1>
+        <h3>Data Science</h3>
         <ul>
-          <li><a href="./ProProjects/Data Science/UofM_DataScience_StudentChallenge.html">Freight Imbalances</a></li>
+          <li><h3><a href="./ProProjects/Data Science/UofM_DataScience_StudentChallenge.html">Freight Imbalances</a></h3></li>
         </ul>
 
-        <h1><br>Hobby Projects</h1>
+        <h1>Hobby Projects</h1>
 
         <h3>Music</h3>
         <ul>
-          <li><a href="./HobbyProjects/Music/MathSongs.html">Math Songs</a></li>          
-          <li><a href="./HobbyProjects/Music/CompSciSongs.html">Computer Science Songs</a></li>
-          <li><a href="./HobbyProjects/Music/OtherSongs.html">Other</a></li>
+          <li><h3><a href="./HobbyProjects/Music/MathSongs.html">Math Songs</a></h3></li>          
+          <li><h3><a href="./HobbyProjects/Music/CompSciSongs.html">Computer Science Songs</a></h3></li>
+          <li><h3><a href="./HobbyProjects/Music/OtherSongs.html">Other</a></h3></li>
         </ul>
         <h3>Food</h3>
         <ul>
-          <li><a href="./HobbyProjects/Food/FoodReviews.html">Reviews</a></li>
+          <li><h3><a href="./HobbyProjects/Food/FoodReviews.html">Reviews</a></h3></li>
         </ul>
         <h3>Fitness</h3>
         <ul>
-          <li><a href="./HobbyProjects/Ftiness/BodybuildingPage.html">Bodybuilding Page</a></li>
+          <li><h3><a href="./HobbyProjects/Ftiness/BodybuildingPage.html">Bodybuilding Page</a></h3></li>
         </ul>
         <h3>Gaming</h3>
         <ul>
-          <li><h3>Live Streams</li>
-          <li>Play Throughs</li>
-          <li>eSports</li>
+          <li><h3>Live Streams</h3></li>
+          <li><h3>Play Throughs</h3></li>
+          <li><h3>eSports</h3></li>
         </ul>
-        <h1><br>Community Events</h1>
+        <h1>Community Events</h1>
         <ul>
-          <li>2020 Code Ninjas Easter Egg Hunt</li>
-          <li>2020 Code Ninjas Trick or Treat</li>
-          <li>2020 Children’s Hospital Foundation of Manitoba GALActic Experience</li>
+          <li><h3>2020 Code Ninjas Easter Egg Hunt</h3></li>
+          <li><h3>2020 Code Ninjas Trick or Treat</h3></li>
+          <li><h3>2020 Children’s Hospital Foundation of Manitoba GALActic Experience</h3></li>
         </ul>
       <footer>
       </footer>
