--- a/HobbyProjects/Gaming/eSports.html
+++ b/HobbyProjects/Gaming/eSports.html
@@ -1,1 +1,45 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>eSports</title>
 
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/styles.css">
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1><a href="https://adriendinzey.github.io/">Adrien Dinzey!</a></h1>
+        <p>My personal page! Learn more about me.</p>
+        <ul>
+          <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
+          <li><a href="https://www.linkedin.com/in/adriendinzey"><strong>LinkedIn</strong></a></li>
+          <li><a href="https://instagram.com/dinzbag"><strong>Instagram</strong></a></li>          
+          <li><a href="https://soundcloud.com/dinzbag"><strong>SoundCloud</strong></a></li>           
+          <li><a href="https://www.youtube.com/channel/UCSKBTV7pPlCeZSW5aYm3kWg"><strong>Youtube</strong></a></li>   
+          <li><a href="https://twitch.tv/dinzbag"><strong>Twitch</strong></a></li>          
+        </ul>
+      </header>
+      <section>
+        <h1>Manitoba Esports</h1>
+        <p>As a member of my local eSports community, I love helping the scene grow. 
+          I regularily participate in, as well as contribute to the tournaments and events hosted by the <a href="https://www.manitobaesports.com/">Manitoba Esports Association</a>.
+          At this site you can view recordings of past games I have participated in or done shoutcasting/analyzing for!
+        </p>    
+        <h1>University of Manitoba Esports</h1>
+        <p>I am currently the President of the eSports club at my university. In this position I drive the growth of eSports and gaming at the University of Manitoba.
+          This involves managing a club of over 400 members and leading an executive team to plan events, manage competitive teams and structure the eSports program at the Univeristy of Manitoba.
+          If you'd like to learn more about this club you can join our <a href="https://discord.gg/KzDGCDSHgf">Discord server which is open to all!</a>
+        </p>
+      <footer>
+      </footer>
+    </div>
+    <script src="https://adriendinzey.github.io/javascripts/scale.fix.js"></script>
+  </body>
+</html>
