--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </ul>
         <h3>Gaming</h3>
         <ul>
-          <li><h3>Live Streams</h3></li>
-          <li><h3>Play Throughs</h3></li>
-          <li><h3>eSports</h3></li>
+          <li><h3><a href="./HobbyProjects/Gaming/LiveStreams.html">Live Streams</a></h3></li>
+          <li><h3><a href="./HobbyProjects/Gaming/Playthroughs.html">Play Throughs</a></h3></li>
+          <li><h3><a href="./HobbyProjects/Gaming/eSports.html">eSports</a></h3></li>
         </ul>
         <h1>Community Events</h1>
         <ul>
