--- a/CommunityEvents/CodeNinjas/EasterEggHunt2020.html
+++ b/CommunityEvents/CodeNinjas/EasterEggHunt2020.html
@@ -1,1 +1,49 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Code Ninjas Easter Egg Hunt 2020</title>
 
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/styles.css">
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1><a href="https://adriendinzey.github.io/">Adrien Dinzey!</a></h1>
+        <p>My personal page! Learn more about me.</p>
+        <ul>
+          <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
+          <li><a href="https://www.linkedin.com/in/adriendinzey"><strong>LinkedIn</strong></a></li>
+          <li><a href="https://instagram.com/dinzbag"><strong>Instagram</strong></a></li>          
+          <li><a href="https://soundcloud.com/dinzbag"><strong>SoundCloud</strong></a></li>           
+          <li><a href="https://www.youtube.com/channel/UCSKBTV7pPlCeZSW5aYm3kWg"><strong>Youtube</strong></a></li>   
+          <li><a href="https://twitch.tv/dinzbag"><strong>Twitch</strong></a></li>          
+        </ul>
+      </header>
+      <section>
+        <h1>Code Ninjas Easter Egg Hunt 2020</h1>
+        <p>As COVID-19 was beginning to set in on Winnipeg, Manitoba, Easter was fast approaching. 
+          Our first lockdown had just hit and a lot of parents were concerned with how their children would be able to manage with the sudden changes.
+          One of these changes was going from seeing their friends almost every day to not seeing them in person at all! 
+          <br>
+          <br>
+          With that in mind, as a "Code Sensei" at Code Ninjas Winnipeg I and my colleague Abram Kremer were tasked with creating a "Virtual Easter Experience". 
+          This led to the creation of a Roblox game where kids could play with their friends and find "Easter Eggs" hidden across the map! 
+          While the game is no longer public, you can get more information in my interview with Global News Winnipeg on this event!
+          <br>
+          <a href="https://globalnews.ca/video/6811251/virtual-easter-egg-hunt/">
+         <img alt="Easter Egg Hunt Interview" src=""./Easter Egg Interview.png""
+         width=300" height="169">
+        </p>
+      <footer>
+      </footer>
+    </div>
+    <script src="https://adriendinzey.github.io/javascripts/scale.fix.js"></script>
+  </body>
+</html>
