--- a/CommunityEvents/CodeNinjas/EasterEggHunt2020.html
+++ b/CommunityEvents/CodeNinjas/EasterEggHunt2020.html
@@ -38,8 +38,8 @@
           While the game is no longer public, you can get more information in my interview with Global News Winnipeg on this event!
           <br>
           <a href="https://globalnews.ca/video/6811251/virtual-easter-egg-hunt/">
-         <img alt="Easter Egg Hunt Interview" src=""./Easter Egg Interview.png""
-         width=300" height="169">
+         <img alt="Easter Egg Hunt Interview" src="./EasterEggInterview.png"
+         width="300" height="169">
         </p>
       <footer>
       </footer>
