--- a/CommunityEvents/CodeNinjas/EasterEggHunt2020.html
+++ b/CommunityEvents/CodeNinjas/EasterEggHunt2020.html
@@ -35,7 +35,7 @@
           <br>
           With that in mind, as a "Code Sensei" at Code Ninjas Winnipeg I and my colleague Abram Kremer were tasked with creating a "Virtual Easter Experience". 
           This led to the creation of a Roblox game where kids could play with their friends and find "Easter Eggs" hidden across the map! 
-          While the game is no longer public, you can get more information in my interview with Global News Winnipeg on this event!
+          While the game is no longer public, you can get more information in my interview with Global News Winnipeg on this event! Click on the image below to view.
           <br>
           <a href="https://globalnews.ca/video/6811251/virtual-easter-egg-hunt/">
          <img alt="Easter Egg Hunt Interview" src="./EasterEggInterview.png"
