--- a/CommunityEvents/Children’sHospital/GALActicExp.html
+++ b/CommunityEvents/Children’sHospital/GALActicExp.html
@@ -1,1 +1,47 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Children’s Hospital Foundation of Manitoba GALActic Experience</title>
 
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/styles.css">
+    <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1><a href="https://adriendinzey.github.io/">Adrien Dinzey!</a></h1>
+        <p>My personal page! Learn more about me.</p>
+        <ul>
+          <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
+          <li><a href="https://www.linkedin.com/in/adriendinzey"><strong>LinkedIn</strong></a></li>
+          <li><a href="https://instagram.com/dinzbag"><strong>Instagram</strong></a></li>          
+          <li><a href="https://soundcloud.com/dinzbag"><strong>SoundCloud</strong></a></li>           
+          <li><a href="https://www.youtube.com/channel/UCSKBTV7pPlCeZSW5aYm3kWg"><strong>Youtube</strong></a></li>   
+          <li><a href="https://twitch.tv/dinzbag"><strong>Twitch</strong></a></li>          
+        </ul>
+      </header>
+      <section>
+        <h1>Children’s Hospital Foundation of Manitoba GALActic Experience</h1>
+        <p>The Children's Hospital Foundation of Manitoba hosts a <a href="https://goodbear.ca/events/galactic/">gala</a> to help raise funds, awareness and the spirits of sick and injured children and their families.
+          As part of the entertainment for this evening, my colleague Abram Kremer and I created a Roblox game tailored to the "Galactic" theme. 
+          The GALActic Experience was another step up from our last game, while keeping the "challenge completion" gameplay elements alive. 
+          This included a blast off into space to begin the game which surprisingly was very difficult to code! The game is still live if you would like to check it out!
+          <br>
+          <br>
+          <a href="https://www.roblox.com/games/5953407083/Code-Ninjas-Canada-Galactic-Adventure">
+         <img alt="GALActic Experience" src="./GALActic experience thumbnail.png"
+              width="300" height="169">
+          </a>
+        </p>
+      <footer>
+      </footer>
+    </div>
+    <script src="https://adriendinzey.github.io/javascripts/scale.fix.js"></script>
+  </body>
+</html>
