--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul>
           <li><h3><a href="./CommunityEvents/CodeNinjas/EasterEggHunt2020.html">2020 Code Ninjas Easter Egg Hunt</a></h3></li>
           <li><h3><a href="./CommunityEvents/CodeNinjas/Halloween2020.html">2020 Code Ninjas Trick or Treat</h3></li>
-          <li><h3>2020 Children’s Hospital Foundation of Manitoba GALActic Experience</h3></li>
+          <li><h3><a href="./CommunityEvents/Children’sHospital/GALActicExp.html">2020 Children’s Hospital Foundation of Manitoba GALActic Experience</a></h3></li>
         </ul>
       <footer>
       </footer>
