--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>[UNDER CONSTRUCTION]<br><a href="https://adriendinzey.github.io/">Adrien Dinzey!</a></h1>
+        <h1><a href="https://adriendinzey.github.io/">Adrien Dinzey!</a></h1>
         <p>My personal page! Learn more about me.</p>
         <ul>
           <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
