--- a/HobbyProjects/Music/CompSciSongs.html
+++ b/HobbyProjects/Music/CompSciSongs.html
@@ -35,6 +35,7 @@
         <h2>Song List</h2><p><a href="https://soundcloud.com/dinzbag/sets/compsci-songs">(playlist)</a></p>            
         <ul>
           <li>2020 <a href="https://soundcloud.com/dinzbag/cece">CeCe</a> (Programming parody of FEFE by 6ix9ine, Nicki Minaj and Murda Beatz)</li>
+          <li>2021 <a href="https://www.youtube.com/watch?v=pCevzX0fU8E">Build a Tree</a> (Programming parody of Build a B**** by Bella Poarch)</li>
         </ul>
       <footer>
       </footer>
