Update and rename Spotify_Insights.html to Billboard_Predictions.html

--- a/ProProjects/Data Science/Billboard_Predictions.html
+++ b/ProProjects/Data Science/Billboard_Predictions.html
@@ -27,10 +27,12 @@
         </ul>
       </header>
       <section>
-        <h1>Spotify Insights</h1>
-        <p>The goal of this project is to answer the question "How successful were arists of past eras compared to the success of modern artists?". 
-        This is a difficult task as we can't simply look at the Spotify numbers for artists who were releasing music before the virtual age of music. 
-        This project will use Spotify numbers of current artists as well as record sales of past artists to try and normalize a ranking system to the general success of each artist.</p>
+        <h1>Billbaord Predictions (In Progress)</h1>
+        <p>The goal of this project is to discover if there is a "formula" for making a hit Billboard song. The project uses data from 
+          <a href="https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-09-14/readme.md">this data base</a> 
+          and creates a predictive model based off objective qualities of songs such as tempo, key, instrumentalness as well as qualities that are commonly seen as 
+          subjective such as valence and dancability to predict whether or not a song will make the Top 100 Billboard, as well as make a model to determine the most likely 
+          position on the Billboard. </p>
       <footer>
       </footer>
     </div>
