--- a/ProProjects/Data Science/Billboard_Predictions.html
+++ b/ProProjects/Data Science/Billboard_Predictions.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Spotify Insights</title>
+    <title>Billbaord Predictions (In Progress)</title>
 
     <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/styles.css">
     <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/pygment_trac.css">
