--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <h1>Professional Projects</h1>
         <h3>Data Science</h3>
         <ul>
-          <li><h3><a href="./ProProjects/Data Science/Spotify_Insights.html">Spotify Insights</a> (In Progress)</h3></li>
+          <li><h3><a href="./ProProjects/Data Science/Billboard_Predictions.html">Billboard Predictions</a> (In Progress)</h3></li>
+          <li><h3><a href="./ProProjects/Data Science/MaskUsage_and_COVID-19.html">Mask Usage and COVID-19</a></h3></li>
         </ul>
 
         <h1>Hobby Projects</h1>
