added galavant page
Also took out the '!'  in "Adrien Dinzey!" in the name of professionalism

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://adriendinzey.github.io/">Adrien Dinzey!</a></h1>
+        <h1><a href="https://adriendinzey.github.io/">Adrien Dinzey</a></h1>
         <p>My personal page! Learn more about me.</p>
         <ul>
           <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
@@ -68,6 +68,7 @@
           <li><h3><a href="./CommunityEvents/CodeNinjas/EasterEggHunt2020.html">2020 Code Ninjas Easter Egg Hunt</a></h3></li>
           <li><h3><a href="./CommunityEvents/CodeNinjas/TrickorTreat2020.html">2020 Code Ninjas Trick or Treat</a></h3></li>
           <li><h3><a href="./CommunityEvents/Children’sHospital/GALActicExp.html">2020 Children’s Hospital Foundation of Manitoba GALActic Experience</a></h3></li>
+          <li><h3><a href="./CommunityEvents/Children’sHospital/GALAvant.html">2021 Children’s Hospital Foundation of Manitoba GALAvant</a></h3></li>
         </ul>
       <footer>
       </footer>
