--- a/CommunityEvents/Children'sHospital/GALActicExp.html
+++ b/CommunityEvents/Children'sHospital/GALActicExp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Children’s Hospital Foundation of Manitoba GALActic Experience</title>
+    <title>Children's Hospital Foundation of Manitoba GALActic Experience</title>
 
     <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/styles.css">
     <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/pygment_trac.css">
@@ -27,7 +27,7 @@
         </ul>
       </header>
       <section>
-        <h1>Children’s Hospital Foundation of Manitoba GALActic Experience</h1>
+        <h1>Children's Hospital Foundation of Manitoba GALActic Experience</h1>
         <p>The Children's Hospital Foundation of Manitoba hosts a <a href="https://goodbear.ca/events/galactic/">gala</a> to help raise funds, awareness and the spirits of sick and injured children and their families.
           As part of the entertainment for this evening, my colleague Abram Kremer and I created a Roblox game tailored to the "Galactic" theme. 
           The GALActic Experience was another step up from our last game, while keeping the "challenge completion" gameplay elements alive. 
