--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <ul>
           <li><h3><a href="./CommunityEvents/CodeNinjas/EasterEggHunt2020.html">2020 Code Ninjas Easter Egg Hunt</a></h3></li>
           <li><h3><a href="./CommunityEvents/CodeNinjas/TrickorTreat2020.html">2020 Code Ninjas Trick or Treat</a></h3></li>
-          <li><h3><a href="./CommunityEvents/Children’sHospital/GALActicExp.html">2020 Children’s Hospital Foundation of Manitoba GALActic Experience</a></h3></li>
-          <li><h3><a href="./CommunityEvents/Children’sHospital/GALAvant.html">2021 Children’s Hospital Foundation of Manitoba GALAvant</a></h3></li>
+          <li><h3><a href="./CommunityEvents/Children'sHospital/GALActicExp.html">2020 Children's Hospital Foundation of Manitoba GALActic Experience</a></h3></li>
+          <li><h3><a href="./CommunityEvents/Children'sHospital/GALAvant.html">2021 Children's Hospital Foundation of Manitoba GALAvant</a></h3></li>
         </ul>
       <footer>
       </footer>
