attempted fix at GALAvant page 2

--- a/CommunityEvents/Children'sHospital/GALAvant.html
+++ b/CommunityEvents/Children'sHospital/GALAvant.html
@@ -37,7 +37,7 @@
           <br>
           <br>
           <a href="https://www.roblox.com/games/7492866665/Wander-The-World">
-         <img alt="GALAvant" src="./GALAvant thumbnail.jpeg"
+         <img alt="GALAvant" src="./GALAvant thumbnail.jpg"
               width="300" height="169">
           </a>
         </p>
